[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Dumb placeholder ant.png" type="Texture" id=1]
[ext_resource path="res://Objects/Ant.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66, 48 )

[node name="Ant" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 0 )
shape = SubResource( 1 )

[node name="FloorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="JumpBeforeLandTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpAfterFallenTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2( 24, 0 )
enabled = true
cast_to = Vector2( 4, 0 )
